--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+BioAlignments = "00701ae9-d1dc-5365-b64a-a3a3ebf5695e"
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
