--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ BioAlignments = "00701ae9-d1dc-5365-b64a-a3a3ebf5695e"
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
