--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
