--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
